WholeProgramAnalysis/New Eval/2.Evaluator/Evaluator.java
/* Generated By:JavaCC: Do not edit this line. Evaluator.java */
import syntaxtree.*;
import java.util.Vector;


public class Evaluator implements EvaluatorConstants {

  static final public Goal Goal() throws ParseException {
   NodeListOptional n0 = new NodeListOptional();
   CompleteConditionalValues n1;
   NodeToken n2;
   Token n3;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      n1 = CompleteConditionalValues();
        n0.addNode(n1);
    }
     n0.nodes.trimToSize();
    n3 = jj_consume_token(0);
      n3.beginColumn++; n3.endColumn++;
      n2 = JTBToolkit.makeNodeToken(n3);
     {if (true) return new Goal(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public CompleteConditionalValues CompleteConditionalValues() throws ParseException {
   ProgramElement n0;
   NodeToken n1;
   Token n2;
   NodeListOptional n3 = new NodeListOptional();
   ConditionalValues n4;
    n0 = ProgramElement();
    n2 = jj_consume_token(26);
              n1 = JTBToolkit.makeNodeToken(n2);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 28:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      n4 = ConditionalValues();
        n3.addNode(n4);
    }
     n3.nodes.trimToSize();
     {if (true) return new CompleteConditionalValues(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public ProgramElement ProgramElement() throws ParseException {
   NodeToken n0;
   Token n1;
   EvalStatus n2;
   NodeToken n3;
   Token n4;
   ClassName n5;
   NodeToken n6;
   Token n7;
   MethodName n8;
   NodeToken n9;
   Token n10;
   TypeTag n11;
   NodeToken n12;
   Token n13;
   ParmNumber n14;
   NodeToken n15;
   Token n16;
   FieldList n17;
   NodeToken n18;
   Token n19;
    n1 = jj_consume_token(LBRACKET);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = EvalStatus();
    n4 = jj_consume_token(COMMA);
            n3 = JTBToolkit.makeNodeToken(n4);
    n5 = ClassName();
    n7 = jj_consume_token(27);
            n6 = JTBToolkit.makeNodeToken(n7);
    n8 = MethodName();
    n10 = jj_consume_token(COMMA);
             n9 = JTBToolkit.makeNodeToken(n10);
    n11 = TypeTag();
    n13 = jj_consume_token(COMMA);
             n12 = JTBToolkit.makeNodeToken(n13);
    n14 = ParmNumber();
    n16 = jj_consume_token(COMMA);
             n15 = JTBToolkit.makeNodeToken(n16);
    n17 = FieldList();
    n19 = jj_consume_token(RBRACKET);
             n18 = JTBToolkit.makeNodeToken(n19);
     {if (true) return new ProgramElement(n0,n2,n3,n5,n6,n8,n9,n11,n12,n14,n15,n17,n18);}
    throw new Error("Missing return statement in function");
  }

  static final public ConditionalValues ConditionalValues() throws ParseException {
   NodeChoice n0;
   LocalType n1;
   ParameterType n2;
   ReturnType n3;
   ArgumentType n4;
   FieldType n5;
    if (jj_2_1(10)) {
      n1 = LocalType();
        n0 = new NodeChoice(n1, 0);
    } else if (jj_2_2(10)) {
      n2 = ParameterType();
        n0 = new NodeChoice(n2, 1);
    } else if (jj_2_3(10)) {
      n3 = ReturnType();
        n0 = new NodeChoice(n3, 2);
    } else if (jj_2_4(10)) {
      n4 = ArgumentType();
        n0 = new NodeChoice(n4, 3);
    } else if (jj_2_5(10)) {
      n5 = FieldType();
        n0 = new NodeChoice(n5, 4);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new ConditionalValues(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public LocalType LocalType() throws ParseException {
   NodeToken n0;
   Token n1;
   EvalStatus n2;
   NodeToken n3;
   Token n4;
   ClassName n5;
   NodeToken n6;
   Token n7;
   MethodName n8;
   NodeToken n9;
   Token n10;
   TypeTag n11;
   NodeToken n12;
   Token n13;
   ParmNumber n14;
   NodeToken n15;
   Token n16;
   FieldList n17;
   NodeToken n18;
   Token n19;
   DependencyValue n20;
   NodeToken n21;
   Token n22;
   ResolvedValue n23;
   NodeToken n24;
   Token n25;
    n1 = jj_consume_token(28);
             n0 = JTBToolkit.makeNodeToken(n1);
    n2 = EvalStatus();
    n4 = jj_consume_token(COMMA);
            n3 = JTBToolkit.makeNodeToken(n4);
    n5 = ClassName();
    n7 = jj_consume_token(27);
            n6 = JTBToolkit.makeNodeToken(n7);
    n8 = MethodName();
    n10 = jj_consume_token(COMMA);
             n9 = JTBToolkit.makeNodeToken(n10);
    n11 = TypeTag();
    n13 = jj_consume_token(COMMA);
             n12 = JTBToolkit.makeNodeToken(n13);
    n14 = ParmNumber();
    n16 = jj_consume_token(COMMA);
             n15 = JTBToolkit.makeNodeToken(n16);
    n17 = FieldList();
    n19 = jj_consume_token(29);
              n18 = JTBToolkit.makeNodeToken(n19);
    n20 = DependencyValue();
    n22 = jj_consume_token(COMMA);
             n21 = JTBToolkit.makeNodeToken(n22);
    n23 = ResolvedValue();
    n25 = jj_consume_token(30);
              n24 = JTBToolkit.makeNodeToken(n25);
     {if (true) return new LocalType(n0,n2,n3,n5,n6,n8,n9,n11,n12,n14,n15,n17,n18,n20,n21,n23,n24);}
    throw new Error("Missing return statement in function");
  }

  static final public ParameterType ParameterType() throws ParseException {
   NodeToken n0;
   Token n1;
   EvalStatus n2;
   NodeToken n3;
   Token n4;
   ClassName n5;
   NodeToken n6;
   Token n7;
   MethodName n8;
   NodeToken n9;
   Token n10;
   TypeTag n11;
   NodeToken n12;
   Token n13;
   ParmNumber n14;
   NodeToken n15;
   Token n16;
   FieldList n17;
   NodeToken n18;
   Token n19;
   DependencyValue n20;
   NodeToken n21;
   Token n22;
   ResolvedValue n23;
   NodeToken n24;
   Token n25;
    n1 = jj_consume_token(28);
             n0 = JTBToolkit.makeNodeToken(n1);
    n2 = EvalStatus();
    n4 = jj_consume_token(COMMA);
            n3 = JTBToolkit.makeNodeToken(n4);
    n5 = ClassName();
    n7 = jj_consume_token(27);
            n6 = JTBToolkit.makeNodeToken(n7);
    n8 = MethodName();
    n10 = jj_consume_token(COMMA);
             n9 = JTBToolkit.makeNodeToken(n10);
    n11 = TypeTag();
    n13 = jj_consume_token(COMMA);
             n12 = JTBToolkit.makeNodeToken(n13);
    n14 = ParmNumber();
    n16 = jj_consume_token(COMMA);
             n15 = JTBToolkit.makeNodeToken(n16);
    n17 = FieldList();
    n19 = jj_consume_token(29);
              n18 = JTBToolkit.makeNodeToken(n19);
    n20 = DependencyValue();
    n22 = jj_consume_token(COMMA);
             n21 = JTBToolkit.makeNodeToken(n22);
    n23 = ResolvedValue();
    n25 = jj_consume_token(30);
              n24 = JTBToolkit.makeNodeToken(n25);
     {if (true) return new ParameterType(n0,n2,n3,n5,n6,n8,n9,n11,n12,n14,n15,n17,n18,n20,n21,n23,n24);}
    throw new Error("Missing return statement in function");
  }

  static final public ReturnType ReturnType() throws ParseException {
   NodeToken n0;
   Token n1;
   EvalStatus n2;
   NodeToken n3;
   Token n4;
   ClassName n5;
   NodeToken n6;
   Token n7;
   MethodName n8;
   NodeToken n9;
   Token n10;
   TypeTag n11;
   NodeToken n12;
   Token n13;
   ParmNumber n14;
   NodeToken n15;
   Token n16;
   FieldList n17;
   NodeToken n18;
   Token n19;
   DependencyValue n20;
   NodeToken n21;
   Token n22;
   ResolvedValue n23;
   NodeToken n24;
   Token n25;
    n1 = jj_consume_token(28);
             n0 = JTBToolkit.makeNodeToken(n1);
    n2 = EvalStatus();
    n4 = jj_consume_token(COMMA);
            n3 = JTBToolkit.makeNodeToken(n4);
    n5 = ClassName();
    n7 = jj_consume_token(27);
            n6 = JTBToolkit.makeNodeToken(n7);
    n8 = MethodName();
    n10 = jj_consume_token(COMMA);
             n9 = JTBToolkit.makeNodeToken(n10);
    n11 = TypeTag();
    n13 = jj_consume_token(COMMA);
             n12 = JTBToolkit.makeNodeToken(n13);
    n14 = ParmNumber();
    n16 = jj_consume_token(COMMA);
             n15 = JTBToolkit.makeNodeToken(n16);
    n17 = FieldList();
    n19 = jj_consume_token(29);
              n18 = JTBToolkit.makeNodeToken(n19);
    n20 = DependencyValue();
    n22 = jj_consume_token(COMMA);
             n21 = JTBToolkit.makeNodeToken(n22);
    n23 = ResolvedValue();
    n25 = jj_consume_token(30);
              n24 = JTBToolkit.makeNodeToken(n25);
     {if (true) return new ReturnType(n0,n2,n3,n5,n6,n8,n9,n11,n12,n14,n15,n17,n18,n20,n21,n23,n24);}
    throw new Error("Missing return statement in function");
  }

  static final public ArgumentType ArgumentType() throws ParseException {
   NodeToken n0;
   Token n1;
   EvalStatus n2;
   NodeToken n3;
   Token n4;
   ClassName n5;
   NodeToken n6;
   Token n7;
   MethodName n8;
   NodeToken n9;
   Token n10;
   TypeTag n11;
   NodeToken n12;
   Token n13;
   ArgNumber n14;
   NodeToken n15;
   Token n16;
   FieldList n17;
   NodeToken n18;
   Token n19;
   DependencyValue n20;
   NodeToken n21;
   Token n22;
   ResolvedValue n23;
   NodeToken n24;
   Token n25;
    n1 = jj_consume_token(28);
             n0 = JTBToolkit.makeNodeToken(n1);
    n2 = EvalStatus();
    n4 = jj_consume_token(COMMA);
            n3 = JTBToolkit.makeNodeToken(n4);
    n5 = ClassName();
    n7 = jj_consume_token(27);
            n6 = JTBToolkit.makeNodeToken(n7);
    n8 = MethodName();
    n10 = jj_consume_token(COMMA);
             n9 = JTBToolkit.makeNodeToken(n10);
    n11 = TypeTag();
    n13 = jj_consume_token(COMMA);
             n12 = JTBToolkit.makeNodeToken(n13);
    n14 = ArgNumber();
    n16 = jj_consume_token(COMMA);
             n15 = JTBToolkit.makeNodeToken(n16);
    n17 = FieldList();
    n19 = jj_consume_token(29);
              n18 = JTBToolkit.makeNodeToken(n19);
    n20 = DependencyValue();
    n22 = jj_consume_token(COMMA);
             n21 = JTBToolkit.makeNodeToken(n22);
    n23 = ResolvedValue();
    n25 = jj_consume_token(30);
              n24 = JTBToolkit.makeNodeToken(n25);
     {if (true) return new ArgumentType(n0,n2,n3,n5,n6,n8,n9,n11,n12,n14,n15,n17,n18,n20,n21,n23,n24);}
    throw new Error("Missing return statement in function");
  }

  static final public FieldType FieldType() throws ParseException {
   NodeToken n0;
   Token n1;
   EvalStatus n2;
   NodeToken n3;
   Token n4;
   ClassName n5;
   NodeToken n6;
   Token n7;
   MethodName n8;
   NodeToken n9;
   Token n10;
   TypeTag n11;
   NodeToken n12;
   Token n13;
   ArgNumber n14;
   NodeToken n15;
   Token n16;
   FieldList n17;
   NodeToken n18;
   Token n19;
   DependencyValue n20;
   NodeToken n21;
   Token n22;
   ResolvedValue n23;
   NodeToken n24;
   Token n25;
    n1 = jj_consume_token(28);
             n0 = JTBToolkit.makeNodeToken(n1);
    n2 = EvalStatus();
    n4 = jj_consume_token(COMMA);
            n3 = JTBToolkit.makeNodeToken(n4);
    n5 = ClassName();
    n7 = jj_consume_token(27);
            n6 = JTBToolkit.makeNodeToken(n7);
    n8 = MethodName();
    n10 = jj_consume_token(COMMA);
             n9 = JTBToolkit.makeNodeToken(n10);
    n11 = TypeTag();
    n13 = jj_consume_token(COMMA);
             n12 = JTBToolkit.makeNodeToken(n13);
    n14 = ArgNumber();
    n16 = jj_consume_token(COMMA);
             n15 = JTBToolkit.makeNodeToken(n16);
    n17 = FieldList();
    n19 = jj_consume_token(29);
              n18 = JTBToolkit.makeNodeToken(n19);
    n20 = DependencyValue();
    n22 = jj_consume_token(COMMA);
             n21 = JTBToolkit.makeNodeToken(n22);
    n23 = ResolvedValue();
    n25 = jj_consume_token(30);
              n24 = JTBToolkit.makeNodeToken(n25);
     {if (true) return new FieldType(n0,n2,n3,n5,n6,n8,n9,n11,n12,n14,n15,n17,n18,n20,n21,n23,n24);}
    throw new Error("Missing return statement in function");
  }

  static final public EvalStatus EvalStatus() throws ParseException {
   NodeChoice n0;
   NodeToken n1;
   Token n2;
   NodeToken n3;
   Token n4;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STATIC:
      n2 = jj_consume_token(STATIC);
                    n1 = JTBToolkit.makeNodeToken(n2);
        n0 = new NodeChoice(n1, 0);
      break;
    case DYNAMIC:
      n4 = jj_consume_token(DYNAMIC);
                     n3 = JTBToolkit.makeNodeToken(n4);
        n0 = new NodeChoice(n3, 1);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new EvalStatus(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassName ClassName() throws ParseException {
   Identifier n0;
   NodeListOptional n1 = new NodeListOptional();
   ClassNameRest n2;
    n0 = Identifier();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 31:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      n2 = ClassNameRest();
        n1.addNode(n2);
    }
     n1.nodes.trimToSize();
     {if (true) return new ClassName(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassNameRest ClassNameRest() throws ParseException {
   NodeToken n0;
   Token n1;
   Identifier n2;
    n1 = jj_consume_token(31);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
     {if (true) return new ClassNameRest(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public MethodName MethodName() throws ParseException {
   Identifier n0;
    n0 = Identifier();
     {if (true) return new MethodName(n0);}
    throw new Error("Missing return statement in function");
  }
